--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,8 @@
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
+    <!-- JQuery -->
+    <script src="js/frameworks/jquery.js"></script>
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -22,7 +24,8 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
-    <script src="js/frameworks/jquery.js"></script>
+ 
+
   </head>
   <body ng-app="starter">
     <!--
@@ -39,4 +42,5 @@
     -->
     <ion-nav-view></ion-nav-view>
   </body>
+  
 </html>
