--- a/www/index.html
+++ b/www/index.html
@@ -24,49 +24,9 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
-<<<<<<< HEAD
- 
-=======
     <script src="js/frameworks/jquery.js"></script>
-    <script type="text/javascript">
-      console.log("here");
-        $(function() {
-          //populate our years select box
-          for (i = new Date().getFullYear(); i > 1900; i--){
-            $('#years').append($('<option />').val(i).html(i));
-          }
-          //populate our months select box
-          for (i = 1; i < 13; i++){
-            $('#months').append($('<option />').val(i).html(i));
-          }
-          //populate our Days select box
-          updateNumberOfDays(); 
-
-          //"listen" for change events
-          $('#years, #months').change(function(){
-            updateNumberOfDays(); 
-          });
-
-        });
-
-      //function to update the days based on the current values of month and year
-      function updateNumberOfDays(){
-        $('#days').html('');
-        month = $('#months').val();
-        year = $('#years').val();
-        days = daysInMonth(month, year);
-
-        for(i=1; i < days+1 ; i++){
-          $('#days').append($('<option />').val(i).html(i));
-        }
-      }
-
-      //helper function
-      function daysInMonth(month, year) {
-        return new Date(year, month, 0).getDate();
-      }
-    </script>
->>>>>>> 81fbd1874d52d4028f764fdcea53b26ccf6b8c0d
+    <script src="js/javascript.js"></script>
+    
 
   </head>
   <body ng-app="starter">
