--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="royal-purpal">
       <ion-nav-back-button>
       </ion-nav-back-button>
     </ion-nav-bar>
