--- a/www/index.html
+++ b/www/index.html
@@ -1,48 +1,60 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <title></title>
 
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+  <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
-    -->
-    <!-- JQuery -->
-    <script src="js/frameworks/jquery.js"></script>
+  -->
+  <!-- JQuery -->
+  <script src="js/frameworks/jquery.js"></script>
 
-    <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
+  <!-- ionic/angularjs js -->
+  <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+  <!-- cordova script (this will be a 404 during development) -->
+  <script src="cordova.js"></script>
 
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
-    <script src="js/frameworks/jquery.js"></script>
-    <script src="js/javascript.js"></script>
-    
+  <!-- your app's js -->
+  <script src="js/app.js"></script>
+  <script src="js/controllers.js"></script>
+  <script src="js/services.js"></script>
+  <script src="js/frameworks/jquery.js"></script>
+  <script src="js/javascript.js"></script>
 
-  </head>
-  <body ng-app="starter">
-    <!--
-      The nav bar that will be updated as we navigate between views.
-    -->
-    <ion-nav-bar class="bar-royal">
-      <ion-nav-buttons side="left">
-        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-      </ion-nav-buttons>
-    <!--
-      The views will be rendered in the <ion-nav-view> directive below
-      Templates are in the /templates folder (but you could also
-      have templates inline in this html file if you'd like).
-    -->
-    <ion-nav-view></ion-nav-view>
-  </body>
-  
+
+</head>
+<ion-content>
+<div class="loadImage">
+  <img src="img/bitcloud1.gif" style="width:101%">
+  <script>
+   setTimeout(function(){
+    $(".loadImage").fadeOut("slow");
+    }, 0);
+ </script>
+</div>
+<div class="list">
+  <div style="text-align: center; margin-top: 10%"> <img src = "img/logo.png"> </div>
+  <div class="padding signUpPadding">
+    <label class="item item-input item-floating-label">
+      <span class="input-label">Email</span>
+      <input type="text" placeholder="Email" ng-model="login.email">
+    </label>
+    <label class="item item-input item-floating-label">
+      <span class="input-label">Password</span>
+      <input type="password" placeholder="Password" ng-model="login.password">
+    </div>
+    <button class="button button-full button-royal" href="#/tab/home">
+      Login
+    </button>
+    <!-- IF the login button is pressed (and authentication is valid), load home.html! -->
+  </div>
+
+</ion-content>
+</ion-view>
 </html>
