--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,7 @@
     <script src="js/services.js"></script>
     <script src="js/frameworks/jquery.js"></script>
     <script src="js/javascript.js"></script>
-    
+
 
   </head>
   <body ng-app="starter">
@@ -37,6 +37,10 @@
       <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
       </ion-nav-buttons>
+      <ion-nav-buttons side="right">
+        <button class="button" ng-Click="composeBooleOut($event)">booleOut</button>
+      </ion-nav-buttons>
+
     <!--
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
@@ -44,5 +48,5 @@
     -->
     <ion-nav-view></ion-nav-view>
   </body>
-  
+
 </html>
