--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,7 @@
     <ion-nav-bar class="bar-royal">
       <ion-nav-back-button>
       </ion-nav-back-button>
+      </ion-nav-buttons>
 
     <!--
       The views will be rendered in the <ion-nav-view> directive below
