--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
       <ion-nav-back-button>
       </ion-nav-back-button>
       </ion-nav-buttons>
-
+    </ion-nav-bar>
     <!--
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
