--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,8 @@
     <script src="js/services.js"></script>
     <script src="js/frameworks/jquery.js"></script>
     <script src="js/javascript.js"></script>
-
+    <script src="js/frameworks/d3.min.js"></script>
+    <script src="js/frameworks/d3pie.min.js"></script>
 
   </head>
   <body ng-app="starter">
@@ -44,5 +45,6 @@
     -->
     <ion-nav-view></ion-nav-view>
   </body>
+  
 
 </html>
