added visualization in the profile page. Popup now displays dynamically

--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
     <script src="js/frameworks/d3pie.min.js"></script>
 
   </head>
-  <body ng-app="starter">
+  <body ng-app="starter" id="dataVisual">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
